<resources>
    <string name="app_name">PokeBox</string>
    <string name="card_viewer_fragment">Card Viewer Fragment</string>
    <string name="scanner_fragment">Scanner Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="watchlist_fragment">Watchlist Fragment</string>
    <string name="background_for_camera_fragment">background for camera fragment</string>
    <string name="camera_launch_button_text">Scan a Card</string>
    <string name="loading">Loading…</string>
    <string name="imgView_cardSelection_description">displays user selected card</string>
    <string name="back">Back</string>
    <string name="select_card">Select Card</string>
    <string name="recycler_item_imageView_description">displays card image for recycler</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="register">Register</string>
    <string name="registerBold">REGISTER</string>
    <string name="loginBold">LOGIN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_user">Existing User?</string>
    <string name="button_for_searchedittext">button for searchEditText</string>
    <string name="button_for_filtering_card_collection_data">button for filtering card collection data</string>
    <string name="search">Search…</string>
    <string name="reverse_holofoil">Reverse Holofoil:</string>
    <string name="holofoil">Holofoil:</string>
    <string name="normal">Normal:</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="delete_card">Delete Card</string>
    <string name="attacks">Attacks:</string>
    <string name="weakness_resistance">Weakness / Resistance:</string>
    <string name="market_prices">Market Prices</string>
    <string name="_1st_edition_holofoil">1st Edition Holofoil:</string>
    <string name="card_number_rarity">Card Number / Rarity:</string>
    <string name="card_type_hp_stage">Card Type / HP / Stage:</string>
    <string name="your_watchlist_is_empty">Your Watchlist Is Empty!</string>
    <string name="filter">Filter</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="you_have_no_cards_in_your_collection">You have no cards in your collection!</string>
</resources>